--- a/webiste shopee/style.css
+++ b/webiste shopee/style.css
@@ -54,6 +54,40 @@ body {
 }
 
 
+/* tyle product tas */
+
+.tulisan-tas {
+    font-family: 'Fredoka One', cursive;
+    font-size: 30px;
+    margin-left: 120px;
+    margin-top: 100px;
+}
+
+.tulisan-baju {
+    font-family: 'Fredoka One', cursive;
+    font-size: 30px;
+    margin-left: 120px;
+}
+
+.tulisan-sepatu {
+    font-family: 'Fredoka One', cursive;
+    font-size: 30px;
+    margin-left: 120px;
+}
+
+.tulisan-jamtangan {
+    font-family: 'Fredoka One', cursive;
+    font-size: 30px;
+    margin-left: 120px;
+}
+
+.tulisan-alattulis {
+    font-family: 'Fredoka One', cursive;
+    font-size: 30px;
+    margin-left: 120px;
+}
+
+
 /* responsive */
 
 @media only screen and ( max-width:420px) {
@@ -97,5 +131,21 @@ body {
     .garis {
         margin-left: -1px;
         background-color: black;
+    }
+    /* style product tas */
+    .tulisan-tas {
+        margin-left: 10px;
+    }
+    .tulisan-baju {
+        margin-left: 10px;
+    }
+    .tulisan-sepatu {
+        margin-left: 10px;
+    }
+    .tulisan-jamtangan {
+        margin-left: 10px;
+    }
+    .tulisan-alattulis {
+        margin-left: 10px;
     }
 }
